increase maincontent width

--- a/src/App.css
+++ b/src/App.css
@@ -2,17 +2,8 @@
   text-align: center;
 }
 
-header {
-  background-color: blue;
-  min-height: 150px;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
-}
-main {
+
+.pages {
   background-color: #e3e8f3;
   min-height: 400px;
   display: flex;
@@ -21,16 +12,6 @@ main {
   justify-content: center;
   font-size: calc(10px + 2vmin);
   color: blue;
-}
-footer{
-  background-color: blue;
-  min-height: 150px;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
 }
 
 /* @keyframes App-logo-spin {
