--- a/src/Components/common/Navbar/Navbar.css
+++ b/src/Components/common/Navbar/Navbar.css
@@ -1,11 +1,15 @@
+.navbar .btn{
+    border-radius: 8px;
+}
 .navbar-brand{
     height:40px;
     display: flex;
     justify-content: space-around;
+    align-items: center;
 }
 .navbar-brand img {
+    margin:10px;
     width: 100%;
     height: 100%;
-    margin-right: 5px;
     object-fit: contain;
 }
