--- a/src/Components/common/Footer/Footer.css
+++ b/src/Components/common/Footer/Footer.css
@@ -8,11 +8,11 @@
 	max-width: 1170px;
 	margin:auto;
 }
-.row{
+.footer .row{
 	display: flex;
 	flex-wrap: wrap;
 }
-ul{
+.footer ul{
 	list-style: none;
 }
 .footer{
