--- a/src/Components/common/Cards/Cards.css
+++ b/src/Components/common/Cards/Cards.css
@@ -4,3 +4,22 @@
     justify-content: center;
     border-radius: 18px;
 }
+.card-wrapper{
+    height:100%
+}
+.card-body .section-one {
+/* background-image: url("../../../Assets/CCLogo.png"); */
+/* background-size: "cover";
+height: 100vh;
+margin-top: -70px;
+font-size:50px;
+background-repeat:no-repeat; */
+}
+.card-body .card-title{
+    border-bottom: 5px dashed;
+    border-radius: 5%;
+    font-weight: bolder;
+    margin:15%;
+    padding:15px;
+    background-color: aqua;
+}
