--- a/src/Components/common/Cards/Cards.css
+++ b/src/Components/common/Cards/Cards.css
@@ -1,9 +1,14 @@
+
+.card-body{
+        background-color: aqua;
+}
 .card-body .btn{
     display:flex;
     align-items: center;
     justify-content: center;
     border-radius: 18px;
 }
+
 .card-wrapper{
     height:100%
 }
@@ -16,10 +21,12 @@ font-size:50px;
 background-repeat:no-repeat; */
 }
 .card-body .card-title{
+    border-top: 1px dotted;
     border-bottom: 5px dashed;
     border-radius: 5%;
+    border-top-radius: 40%;
     font-weight: bolder;
-    margin:15%;
-    padding:15px;
+    margin: 5% 25%;
+    padding:5px;
     background-color: aqua;
 }
