--- a/src/Components/common/Poster/Poster.css
+++ b/src/Components/common/Poster/Poster.css
@@ -34,11 +34,13 @@ border-top:1px dotted white;
 .child-one img,
 .child-three img {
     width: 80%;
+    border: 10px dotted white;
 }
 .child-two img{
     width: 50%;
     margin-top: -10%;
     z-index: 1;
+    border: 4px dotted white;
 }
 .poster-body .child-three img{
 margin-top: -20%;
